deployments/isbtv/setup-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: isbtv-config-setup
  namespace: isbtv 
  labels:
    app: isponsorblocktv-setup
spec:
  hostNetwork: true 
  dnsPolicy: ClusterFirstWithHostNet
  containers:
  - name: setup-container
    image: ghcr.io/dmunozv04/isponsorblocktv:latest
    args: ["--setup-cli"]
    volumeMounts:
    - name: config-volume
      mountPath: /app/data
    stdin: true
    tty: true
  volumes:
  - name: config-volume
    persistentVolumeClaim: 
      claimName: isbtv-data 
  restartPolicy: Never
