deployments/isbtv/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: isbtv-service
  namespace: isbtv 
spec:
  selector:
    app: isponsorblocktv
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
