deployments/isbtv/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: isbtv-ingress
  namespace: isbtv
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`isponsorblocktv.local.tigovanroy.space`)
      kind: Rule
      services:
        - name: isbtv-service
          port: 8080
  tls:
    secretName: local-tigovanroy-space-production-tls
